# timing-web

./: README.md  metadata.json  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  tracker.rs
src/components/: Activities.tsx  Dashboard.tsx  Reports.tsx  Settings.tsx  Sidebar.tsx  Timeline.tsx
src/lib/: tauriApi.ts
